add master user

--- a/.env.local
+++ b/.env.local
@@ -39,3 +39,6 @@ CLOUDINARY_URL='cloudinary://277527344861111:I-mYIJTpr1TRn3GZ-S3yH3tA3R0@boxity-
 CLOUDINARY_UPLOAD_PRESET=
 CLOUDINARY_NOTIFICATION_URL=
 JWT_SECRET=
+
+SESSION_DOMAIN=localhost:3000
+SANCTUM_STATEFUL_DOMAINS=localhost:3000
