--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 APP_NAME='API BOXITY'
 APP_ENV=production
-APP_KEY=flcDSPxgOSsQgljL95JNsKAV9WM9qjn8
+APP_KEY=
 APP_DEBUG=false
 APP_URL=https://beta-api-boxity.octansidn.com
 APP_TIMEZONE='Asia/Jakarta'
