--- a/.env.production
+++ b/.env.production
@@ -9,7 +9,7 @@ LOG_CHANNEL=daily
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=154.41.240.55
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=u481419426_beta_boxity
 DB_USERNAME=u481419426_user_beta_box
