update: production db password

--- a/.env.production
+++ b/.env.production
@@ -13,7 +13,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=u481419426_beta_boxity
 DB_USERNAME=u481419426_user_beta_box
-DB_PASSWORD='LibrA21101998'
+DB_PASSWORD='=V2e~7O7Ssi'
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
