--- a/.env.local
+++ b/.env.local
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE='api-boxity-v1'
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=Seni@ti12345
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
