update: profile and businesses

--- a/.env.local
+++ b/.env.local
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE='api-boxity-v1'
 DB_USERNAME=root
-DB_PASSWORD=Seni@ti12345
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
@@ -25,7 +25,7 @@ MAIL_USERNAME=de6b1c11b67b43
 MAIL_PASSWORD=7badd9a3876f36
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=baharihari49@gmail.com
-MAIL_FROM_NAME="Boxity
+MAIL_FROM_NAME="Boxity"
 
 GOOGLE_RECAPTCHA_KEY='6LfIKJEbAAAAAJ8KjFzHalPot6USRkl8hwbHWMAi'
 GOOGLE_RECAPTCHA_SECRET='6LfIKJEbAAAAAAyooKyt81alA2jU6WlUbHohvEyx'
