--- a/.env.local
+++ b/.env.local
@@ -8,12 +8,19 @@ APP_TIMEZONE='Asia/Jakarta'
 LOG_CHANNEL=daily
 LOG_SLACK_WEBHOOK_URL=
 
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE='api-boxity-v1'
+# DB_USERNAME=workbench
+# DB_PASSWORD=Seni@ti12345
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE='api-boxity-v1'
 DB_USERNAME=root
-DB_PASSWORD=Seni@ti12345
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
