update: adding notifications in all controller

--- a/.env.production
+++ b/.env.production
@@ -39,3 +39,8 @@ CLOUDINARY_URL='cloudinary://277527344861111:I-mYIJTpr1TRn3GZ-S3yH3tA3R0@boxity-
 CLOUDINARY_UPLOAD_PRESET=
 CLOUDINARY_NOTIFICATION_URL=
 JWT_SECRET=
+
+BROADCAST_DRIVER=pusher
+PUSHER_APP_ID="1764098"
+PUSHER_APP_KEY="8f38a0d70920fccba8c2"
+PUSHER_APP_SECRET="543dc35e9f2b1661fa28"
