--- a/.env.local
+++ b/.env.local
@@ -49,3 +49,8 @@ JWT_SECRET=
 
 SESSION_DOMAIN=localhost:3000
 SANCTUM_STATEFUL_DOMAINS=localhost:3000
+
+BROADCAST_DRIVER=pusher
+PUSHER_APP_ID="1764098"
+PUSHER_APP_KEY="8f38a0d70920fccba8c2"
+PUSHER_APP_SECRET="543dc35e9f2b1661fa28"
