--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-backup": "^8.5"
     },
     "require-dev": {
