--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "laravel/sanctum": "^3.3",
         "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8",
+        "laravelcollective/html": "^6.4",
         "pusher/pusher-php-server": "^7.2",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-backup": "^8.5"
     },
     "require-dev": {
