--- a/.env.production
+++ b/.env.production
@@ -44,3 +44,4 @@ BROADCAST_DRIVER=pusher
 PUSHER_APP_ID="1764098"
 PUSHER_APP_KEY="8f38a0d70920fccba8c2"
 PUSHER_APP_SECRET="543dc35e9f2b1661fa28"
+SANCTUM_STATEFUL_DOMAINS=https://erp-fe-uat.octansidn.com
