--- a/.env.local
+++ b/.env.local
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE='api-boxity-v1'
-DB_USERNAME=workbench
-DB_PASSWORD=Seni@ti12345
+DB_USERNAME=root
+DB_PASSWORD=
 
 # DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
@@ -24,6 +24,8 @@ DB_PASSWORD=Seni@ti12345
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+SESSION_DRIVER=cookie
+SESSION_LIFETIME=120
 
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
@@ -55,3 +57,4 @@ PUSHER_APP_ID="1764098"
 PUSHER_APP_KEY="8f38a0d70920fccba8c2"
 PUSHER_APP_SECRET="543dc35e9f2b1661fa28"
 PUSHER_HOST='127.0.0.1'
+SANCTUM_STATEFUL_DOMAINS=localhost,localhost:3000,127.0.0.1,127.0.0.1:8000,::1
