--- a/.env.production
+++ b/.env.production
@@ -17,6 +17,8 @@ DB_PASSWORD='=V2e~7O7Ssi'
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+SESSION_DRIVER=cookie
+SESSION_LIFETIME=120
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.hostinger.com
@@ -45,3 +47,4 @@ PUSHER_APP_ID="1764098"
 PUSHER_APP_KEY="8f38a0d70920fccba8c2"
 PUSHER_APP_SECRET="543dc35e9f2b1661fa28"
 PUSHER_HOST=https://beta-api-boxity.octansidn.com
+SANCTUM_STATEFUL_DOMAINS=beta-api-boxity.octansidn.com
