--- a/.env.local
+++ b/.env.local
@@ -58,3 +58,17 @@ PUSHER_APP_KEY="8f38a0d70920fccba8c2"
 PUSHER_APP_SECRET="543dc35e9f2b1661fa28"
 PUSHER_HOST='127.0.0.1'
 SANCTUM_STATEFUL_DOMAINS=localhost,localhost:3000,127.0.0.1,127.0.0.1:8000,::1
+
+REVERB_APP_ID=225760
+REVERB_APP_KEY=7zskrgww1cs4qfbvxsfh
+REVERB_APP_SECRET=q2cf48qbmhgaiarcbwos
+REVERB_SCHEME=http
+REVERB_SERVER_HOST=0.0.0.0
+REVERB_SERVER_PORT=8080
+
+REVERB_HOST="localhost"
+REVERB_PORT=8000
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
