--- a/.env.production
+++ b/.env.production
@@ -42,9 +42,23 @@ CLOUDINARY_UPLOAD_PRESET=
 CLOUDINARY_NOTIFICATION_URL=
 JWT_SECRET=
 
-BROADCAST_DRIVER=pusher
+BROADCAST_DRIVER=reverb
 PUSHER_APP_ID="1764098"
 PUSHER_APP_KEY="8f38a0d70920fccba8c2"
 PUSHER_APP_SECRET="543dc35e9f2b1661fa28"
 PUSHER_HOST=https://beta-api-boxity.octansidn.com
 SANCTUM_STATEFUL_DOMAINS=beta-api-boxity.octansidn.com
+
+REVERB_APP_ID=225760
+REVERB_APP_KEY=7zskrgww1cs4qfbvxsfh
+REVERB_APP_SECRET=q2cf48qbmhgaiarcbwos
+REVERB_SCHEME=http
+REVERB_SERVER_HOST=0.0.0.0
+REVERB_SERVER_PORT=8080
+
+REVERB_HOST="beta-api-boxity.octansidn.com"
+REVERB_PORT=443
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
