--- a/.env.local
+++ b/.env.local
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE='api-boxity-v1'
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=workbench
+DB_PASSWORD=Seni@ti12345
 
 # DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
@@ -52,19 +52,24 @@ JWT_SECRET=
 SESSION_DOMAIN=localhost:3000
 SANCTUM_STATEFUL_DOMAINS=localhost:3000
 
-BROADCAST_DRIVER=pusher
+BROADCAST_DRIVER=reverb
 PUSHER_APP_ID="1764098"
 PUSHER_APP_KEY="8f38a0d70920fccba8c2"
 PUSHER_APP_SECRET="543dc35e9f2b1661fa28"
 PUSHER_HOST='127.0.0.1'
 SANCTUM_STATEFUL_DOMAINS=localhost,localhost:3000,127.0.0.1,127.0.0.1:8000,::1
 
-REVERB_APP_ID=225760
-REVERB_APP_KEY=7zskrgww1cs4qfbvxsfh
-REVERB_APP_SECRET=q2cf48qbmhgaiarcbwos
+REVERB_APP_ID=806539
+REVERB_APP_KEY=5ecdwvjx0eib3acnuypj
+REVERB_APP_SECRET=lp1whvvgpbqpbtjduz3e
+REVERB_HOST="localhost"
+REVERB_PORT=8080
 REVERB_SCHEME=http
-REVERB_SERVER_HOST=0.0.0.0
-REVERB_SERVER_PORT=8080
+
+# VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+# VITE_REVERB_HOST="${REVERB_HOST}"
+# VITE_REVERB_PORT="${REVERB_PORT}"
+# VITE_REVERB_SCHEME="${REVERB_SCHEME}"
 
 REVERB_HOST="localhost"
 REVERB_PORT=8000
