--- a/.env.local
+++ b/.env.local
@@ -9,11 +9,11 @@ LOG_CHANNEL=daily
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=172.28.1.12
 DB_PORT=3306
 DB_DATABASE='api-boxity-v1'
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=bahari
+DB_PASSWORD=Seniati12345
 
 # DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
